--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
-      <h1 class="header__title">Научиться учиться</h1>
+      <h1 class="header__title">Научиться<br>учиться</h1>
       <h2 class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &#8594</a>
       </h2>
-      <img src="./images/header-image.png" class="header__main-illustration">
+      <img src="./images/header-image.png" alt="Главная картинка" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
