--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
-      <h1 class="header__title">Научиться<br>учиться</h1>
+      <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &#8594</a>
@@ -21,6 +21,23 @@
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+                Ни в школе, не в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты.
+                Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
+                Зубрежка быстро выветривается и не приносит пользы.
+            </p>
+            <p class="two-columns__paragraph">
+                <span class="span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же 
+                техники применяются на примере обучения в Практикуме.
+            </p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
