--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">выучить и не забыть</h3>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
         <a href="#" class="feynman__link">Подробнее &#8594</a>
       </section>
 
