set styles in index.html for footer

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &#8594</a>
+        <a href="#" class="header__link">Узнать &#8594</a>      
       </h2>
-      <img src="./images/header-image.png" alt="Главная картинка" class="header__main-illustration">
+      <img src="./images/header-image.png" alt="Иллюстрация 'Опять двойка'" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -136,7 +136,34 @@
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <div class="footer__author">
+            &copy2021. Максим Давлеткильдеев
+          </div>
+        </div>
+        <div class="footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <nav class="footer__column__links">
+            <ul>
+              <li class="footer__column-link">Главная</li>
+              <li class="footer__column-link">Концепция</li>
+              <li class="footer__column-link">Наставники</li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <nav class="footer__column-links">
+            <ul>
+              <li class="footer__column-link">Facebook</li>
+              <li class="footer__column-link">ВКонтакте</li>
+              <li class="footer__column-link">Instagram</li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
