--- a/index.html
+++ b/index.html
@@ -140,27 +140,23 @@
         <div class="footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <div class="footer__author">
-            &copy2021. Максим Давлеткильдеев
+            &copy 2021. Максим Давлеткильдеев
           </div>
         </div>
         <div class="footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
-          <nav class="footer__column__links">
-            <ul>
-              <li class="footer__column-link">Главная</li>
-              <li class="footer__column-link">Концепция</li>
-              <li class="footer__column-link">Наставники</li>
-            </ul>
+          <nav class="footer__column-links">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
           </nav>
         </div>
         <div class="footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <nav class="footer__column-links">
-            <ul>
-              <li class="footer__column-link">Facebook</li>
-              <li class="footer__column-link">ВКонтакте</li>
-              <li class="footer__column-link">Instagram</li>
-            </ul>
+            <a href="#" class="footer__column-link">Facebook</a>
+            <a href="#" class="footer__column-link">ВКонтакте</a>
+            <a href="#" class="footer__column-link">Instagram</a>
           </nav>
         </div>
       </div>
