--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &#8594</a>      
+        <a href="#" class="header__link">Узнать &#8594;</a>      
       </h2>
       <img src="./images/header-image.png" alt="Иллюстрация 'Опять двойка'" class="header__main-illustration">
       <div class="header__square-pic"></div>
@@ -84,7 +84,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть</h3>
-        <a href="#" class="feynman__link">Подробнее &#8594</a>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
       </section>
 
       <section class="kaufman">
@@ -140,7 +140,7 @@
         <div class="footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <div class="footer__author">
-            &copy 2021. Максим Давлеткильдеев
+            &copy; 2021. Максим Давлеткильдеев
           </div>
         </div>
         <div class="footer__column_content_info">
