--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">
+      <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &#8594;</a>      
-      </h2>
+      </p>
       <img src="./images/header-image.png" alt="Иллюстрация 'Опять двойка'" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
                 Ни в школе, не в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты.
@@ -30,7 +30,7 @@
                 Зубрежка быстро выветривается и не приносит пользы.
             </p>
             <p class="two-columns__paragraph">
-                <span class="span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+                <span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </p>
             <p class="two-columns__paragraph">
                 Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же 
@@ -93,43 +93,43 @@
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
-            <p class="table__text text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">2</h4>
-            <p class="table__text text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">3</h4>
-            <p class="table__text text_theme_dark">Определите целевой уровень мастерства.</p>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">4</h4>
-            <p class="table__text text_theme_dark">Разбейте навык на элементы.</p>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">5</h4>
-            <p class="table__text text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">6</h4>
-            <p class="table__text text_theme_dark">Устраните препятствия для занятий.</p>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">7</h4>
-            <p class="table__text text_theme_dark">Выделите специальное время для занятий.</p>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">8</h4>
-            <p class="table__text text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">9</h4>
-            <p class="table__text text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">10</h4>
-            <p class="table__text text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
         <div class="kaufman__triangle"></div>
@@ -137,13 +137,13 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <div class="footer__author">
+          <p class="footer__author">  <!--Ведь здесь структура "блок__элемент"? Выделено как ошибка-->
             &copy; 2021. Максим Давлеткильдеев
-          </div>
+          </p>
         </div>
-        <div class="footer__column_content_info">
+        <div class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <nav class="footer__column-links">
             <a href="#" class="footer__column-link">Главная</a>
@@ -151,12 +151,21 @@
             <a href="#" class="footer__column-link">Наставники</a>
           </nav>
         </div>
-        <div class="footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <nav class="footer__column-links">
-            <a href="#" class="footer__column-link">Facebook</a>
-            <a href="#" class="footer__column-link">ВКонтакте</a>
-            <a href="#" class="footer__column-link">Instagram</a>
+            <a href="#" class="footer__column-link">
+              <img src="../how-to-learn/images/facebook_color_white.svg" alt="иконка фейсбука" class="footer__social-icon">
+              Facebook
+            </a>
+            <a href="#" class="footer__column-link">
+              <img src="../how-to-learn/images/vk_color_white.svg" alt="иконка в контакте" class="footer__social-icon">
+              ВКонтакте
+            </a>
+            <a href="#" class="footer__column-link">
+              <img src="../how-to-learn/images/instagram_color_white.svg" alt="иконка инстаграмма" class="footer__social-icon">
+              Instagram
+            </a>
           </nav>
         </div>
       </div>
