correct the comments in the file

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author">  <!--Ведь здесь структура "блок__элемент"? Выделено как ошибка-->
+          <p class="footer__author">
             &copy; 2021. Максим Давлеткильдеев
           </p>
         </div>
