correct the image path

--- a/index.html
+++ b/index.html
@@ -165,19 +165,19 @@
             <ul class="footer__column-links">
               <li>
                 <a href="#" class="footer__column-link">
-                  <img src="../how-to-learn/images/facebook_color_white.svg" alt="иконка 'Фейсбук'" class="footer__social-icon">
+                  <img src="./images/facebook_color_white.svg" alt="иконка 'Фейсбук'" class="footer__social-icon">
                   Facebook
                 </a>
               </li>
               <li>
                 <a href="#" class="footer__column-link">
-                  <img src="../how-to-learn/images/vk_color_white.svg" alt="иконка 'В контакте'" class="footer__social-icon">
+                  <img src="./images/vk_color_white.svg" alt="иконка 'В контакте'" class="footer__social-icon">
                   ВКонтакте
                 </a>
               </li>
               <li>
                 <a href="#" class="footer__column-link">
-                  <img src="../how-to-learn/images/instagram_color_white.svg" alt="иконка 'Инстаграмм'" class="footer__social-icon">
+                  <img src="./images/instagram_color_white.svg" alt="иконка 'Инстаграмм'" class="footer__social-icon">
                   Instagram
                 </a>
               </li>
