--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#" class="header__link">Узнать &#8594;</a>      
       </p>
       <img src="./images/header-image.png" alt="Иллюстрация 'Опять двойка'" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -38,6 +38,87 @@
             </p>
           </div>
         </div>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section-title">
+          Техники обучения
+        </h2>
+        <P class="section-subtitle">Пять практик от Барбары Оакли</P>
+        <div class="cards">
+          <div class="cards__item">
+            <img src="../how-to-learn/images/cards-attention.png" alt="" class="cards__image">
+            <h3 class="cards__title">
+              Два вида внимания
+            </h3>
+            <p class="cards__description">
+              Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img src="../how-to-learn/images/cards-recall.png" alt="" class="cards__image">
+            <h3 class="cards__title">
+              Recall
+            </h3>
+            <p class="cards__description">
+              Вспоминайте изученное - это позволит соединить разрозненные порции памяти.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img src="../how-to-learn/images/cards-interliving.png" alt="" class="cards__image">
+            <h3 class="cards__title">
+              Интерливинг
+            </h3>
+            <p class="cards__description">
+              Изучайте несколько навыков одновременно, они обогащают друг друга.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img src="../how-to-learn/images/cards-question.png" alt="" class="cards__image">
+            <h3 class="cards__title">
+              Вопросы
+            </h3>
+            <p class="cards__description">
+              Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img src="../how-to-learn/images/cards-competence.png" alt="" class="cards__image">
+            <h3 class="cards__title">
+              Иллюзия компетентности
+            </h3>
+            <p class="cards__description">
+              Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+          <iframe type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>     
+        </div> 
+      </section>
+      
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли</h2>
+          <div class="two-columns__main-text">
+            С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
+            чтобы получить надбавку, да так успешно, что ёё выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара 
+            придумала свой подход к точным наукам. Оказалось, если вам что-то "плохо даётся", ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно 
+            с первого взгляда.
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
       </section>
 
       <section class="digits">
@@ -81,10 +162,23 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир - школа</h2>
+          <blockquote class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу "Весь мир - школа" 
+            нужно прочитать всем, кто занимается образованием - так учащиеся повсюду смогут получить навыки и знания, которые 
+            приносят успех в школе, карьере и жизни.
+          </blockquote>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
+          <div class="khan__book-container">
+            <img src="../how-to-learn/images/khan-book.jpg" alt="Книга 'Весь мир - школа'" class="khan__book-pic">
+            <a href="#" class="khan__buy-link">Купить книгу &#8594</a>
+          </div>
+        </div>
+
       </section>
 
       <section class="kaufman">
@@ -132,9 +226,29 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li>
+            <img src="../how-to-learn/images/resources-arzamas.svg" alt="Логотип 'Arzamas'" class="resources__logo"></img>
+          </li>
+          <li>
+            <img src="../how-to-learn/images/resources-n1.svg" alt="Логотип 'N+1'" class="resources__logo"></img>
+          </li>
+          <li>
+            <img src="../how-to-learn/images/resources-strelka.svg" alt="Логотип 'STRELKA'" class="resources__logo"></img>
+          </li>
+          <li>
+            <img src="../how-to-learn/images/resources-polka.svg" alt="Логотип 'ПОЛКА'" class="resources__logo"></img>
+          </li> 
+        </ul>
       </section>
     </main>
+
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
@@ -165,19 +279,19 @@
             <ul class="footer__column-links">
               <li>
                 <a href="#" class="footer__column-link">
-                  <img src="./images/facebook_color_white.svg" alt="иконка 'Фейсбук'" class="footer__social-icon">
+                  <img src="./images/facebook_color_white.svg" alt="Иконка 'Фейсбук'" class="footer__social-icon">
                   Facebook
                 </a>
               </li>
               <li>
                 <a href="#" class="footer__column-link">
-                  <img src="./images/vk_color_white.svg" alt="иконка 'В контакте'" class="footer__social-icon">
+                  <img src="./images/vk_color_white.svg" alt="Иконка 'В контакте'" class="footer__social-icon">
                   ВКонтакте
                 </a>
               </li>
               <li>
                 <a href="#" class="footer__column-link">
-                  <img src="./images/instagram_color_white.svg" alt="иконка 'Инстаграмм'" class="footer__social-icon">
+                  <img src="./images/instagram_color_white.svg" alt="Иконка 'Инстаграмм'" class="footer__social-icon">
                   Instagram
                 </a>
               </li>
