correct css styles and index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <P class="section-subtitle">Пять практик от Барбары Оакли</P>
         <div class="cards">
           <div class="cards__item">
-            <img src="../how-to-learn/images/cards-attention.png" alt="" class="cards__image">
+            <img src="../how-to-learn/images/cards-attention.png" alt="Иллюстрация 'Два вида внимания'" class="cards__image">
             <h3 class="cards__title">
               Два вида внимания
             </h3>
@@ -56,7 +56,7 @@
             </p>
           </div>
           <div class="cards__item">
-            <img src="../how-to-learn/images/cards-recall.png" alt="" class="cards__image">
+            <img src="../how-to-learn/images/cards-recall.png" alt="Иллюстрация 'Вспоминайте изученное'" class="cards__image">
             <h3 class="cards__title">
               Recall
             </h3>
@@ -65,7 +65,7 @@
             </p>
           </div>
           <div class="cards__item">
-            <img src="../how-to-learn/images/cards-interliving.png" alt="" class="cards__image">
+            <img src="../how-to-learn/images/cards-interliving.png" alt="Иллюстрация 'Интерливинг'" class="cards__image">
             <h3 class="cards__title">
               Интерливинг
             </h3>
@@ -74,7 +74,7 @@
             </p>
           </div>
           <div class="cards__item">
-            <img src="../how-to-learn/images/cards-question.png" alt="" class="cards__image">
+            <img src="../how-to-learn/images/cards-question.png" alt="Иллюстрация 'Вопросы'" class="cards__image">
             <h3 class="cards__title">
               Вопросы
             </h3>
@@ -83,7 +83,7 @@
             </p>
           </div>
           <div class="cards__item">
-            <img src="../how-to-learn/images/cards-competence.png" alt="" class="cards__image">
+            <img src="../how-to-learn/images/cards-competence.png" alt="Иллюстрация 'Иллюзия компетентности'" class="cards__image">
             <h3 class="cards__title">
               Иллюзия компетентности
             </h3>
@@ -98,8 +98,8 @@
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
-          <iframe type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>     
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>     
         </div> 
       </section>
       
@@ -175,7 +175,7 @@
           <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
           <div class="khan__book-container">
             <img src="../how-to-learn/images/khan-book.jpg" alt="Книга 'Весь мир - школа'" class="khan__book-pic">
-            <a href="#" class="khan__buy-link">Купить книгу &#8594</a>
+            <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
           </div>
         </div>
 
@@ -234,16 +234,16 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
           <li>
-            <img src="../how-to-learn/images/resources-arzamas.svg" alt="Логотип 'Arzamas'" class="resources__logo"></img>
+            <img src="../how-to-learn/images/resources-arzamas.svg" alt="Логотип 'Arzamas'" class="resources__logo">
           </li>
           <li>
-            <img src="../how-to-learn/images/resources-n1.svg" alt="Логотип 'N+1'" class="resources__logo"></img>
+            <img src="../how-to-learn/images/resources-n1.svg" alt="Логотип 'N+1'" class="resources__logo">
           </li>
           <li>
-            <img src="../how-to-learn/images/resources-strelka.svg" alt="Логотип 'STRELKA'" class="resources__logo"></img>
+            <img src="../how-to-learn/images/resources-strelka.svg" alt="Логотип 'STRELKA'" class="resources__logo">
           </li>
           <li>
-            <img src="../how-to-learn/images/resources-polka.svg" alt="Логотип 'ПОЛКА'" class="resources__logo"></img>
+            <img src="../how-to-learn/images/resources-polka.svg" alt="Логотип 'ПОЛКА'" class="resources__logo">
           </li> 
         </ul>
       </section>
