--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="page">
+
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
@@ -19,6 +20,7 @@
       <img src="./images/header-image.png" alt="Иллюстрация 'Опять двойка'" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
     </header>
+
     <main class="content">
       <section class="description">
         <div class="two-columns">
@@ -41,65 +43,43 @@
       </section>
 
       <section class="techniques">
-        <h2 class="section-title">
-          Техники обучения
-        </h2>
+        <h2 class="section-title">Техники обучения</h2>
         <P class="section-subtitle">Пять практик от Барбары Оакли</P>
-        <div class="cards">
-          <div class="cards__item">
+        <ul class="cards">
+          <li class="cards__item">
             <img src="../how-to-learn/images/cards-attention.png" alt="Иллюстрация 'Два вида внимания'" class="cards__image">
-            <h3 class="cards__title">
-              Два вида внимания
-            </h3>
-            <p class="cards__description">
-              Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
-            </p>
-          </div>
-          <div class="cards__item">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
             <img src="../how-to-learn/images/cards-recall.png" alt="Иллюстрация 'Вспоминайте изученное'" class="cards__image">
-            <h3 class="cards__title">
-              Recall
-            </h3>
-            <p class="cards__description">
-              Вспоминайте изученное - это позволит соединить разрозненные порции памяти.
-            </p>
-          </div>
-          <div class="cards__item">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
             <img src="../how-to-learn/images/cards-interliving.png" alt="Иллюстрация 'Интерливинг'" class="cards__image">
-            <h3 class="cards__title">
-              Интерливинг
-            </h3>
-            <p class="cards__description">
-              Изучайте несколько навыков одновременно, они обогащают друг друга.
-            </p>
-          </div>
-          <div class="cards__item">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
             <img src="../how-to-learn/images/cards-question.png" alt="Иллюстрация 'Вопросы'" class="cards__image">
-            <h3 class="cards__title">
-              Вопросы
-            </h3>
-            <p class="cards__description">
-              Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.
-            </p>
-          </div>
-          <div class="cards__item">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
             <img src="../how-to-learn/images/cards-competence.png" alt="Иллюстрация 'Иллюзия компетентности'" class="cards__image">
-            <h3 class="cards__title">
-              Иллюзия компетентности
-            </h3>
-            <p class="cards__description">
-              Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
-            </p>
-          </div>
-        </div>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
       </section>
 
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>     
+          <iframe title="TED Джош Кауфман" src="https://www.youtube.com/embed/5MgBikgcWnY" class="video__iframe"></iframe>
+          <iframe title="TED Тим Урбан" src="https://www.youtube.com/embed/arj7oStGLkU" class="video__iframe"></iframe>     
         </div> 
       </section>
       
@@ -107,10 +87,12 @@
         <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли</h2>
           <div class="two-columns__main-text">
-            С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
-            чтобы получить надбавку, да так успешно, что ёё выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара 
-            придумала свой подход к точным наукам. Оказалось, если вам что-то "плохо даётся", ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно 
-            с первого взгляда.
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
+              чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара 
+              придумала свой подход к точным наукам. Оказалось, если вам что-то "плохо даётся", ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно 
+              с первого взгляда.
+            </p>
           </div>
         </div>
       </section>
@@ -178,7 +160,6 @@
             <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
           </div>
         </div>
-
       </section>
 
       <section class="kaufman">
@@ -247,6 +228,7 @@
           </li> 
         </ul>
       </section>
+  
     </main>
 
     <footer class="footer">
@@ -300,6 +282,7 @@
         </div>
       </div>
     </footer>
+
   </div>
 </body>
 </html>
