add new class in section-subtitle, add links and new class in resources, reset paddings

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
-        <P class="section-subtitle">Пять практик от Барбары Оакли</P>
+        <P class="section-subtitle section-subtitle_margin_top">Пять практик от Барбары Оакли</P>
         <ul class="cards">
           <li class="cards__item">
             <img src="../how-to-learn/images/cards-attention.png" alt="Иллюстрация 'Два вида внимания'" class="cards__image">
@@ -76,7 +76,7 @@
 
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
-        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <p class="section-subtitle section-subtitle_margin_top">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe title="TED Джош Кауфман" src="https://www.youtube.com/embed/5MgBikgcWnY" class="video__iframe"></iframe>
           <iframe title="TED Тим Урбан" src="https://www.youtube.com/embed/arj7oStGLkU" class="video__iframe"></iframe>     
@@ -105,7 +105,7 @@
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-        <p class="section-subtitle">Про учёбу и мозг</p>
+        <p class="section-subtitle section-subtitle_margin_top">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -164,7 +164,7 @@
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <p class="section-subtitle section-subtitle_theme_dark section-subtitle_margin_top">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -212,21 +212,31 @@
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <ul class="resources__logo-zone">
-          <li>
-            <img src="../how-to-learn/images/resources-arzamas.svg" alt="Логотип 'Arzamas'" class="resources__logo">
-          </li>
-          <li>
-            <img src="../how-to-learn/images/resources-n1.svg" alt="Логотип 'N+1'" class="resources__logo">
-          </li>
-          <li>
-            <img src="../how-to-learn/images/resources-strelka.svg" alt="Логотип 'STRELKA'" class="resources__logo">
-          </li>
-          <li>
-            <img src="../how-to-learn/images/resources-polka.svg" alt="Логотип 'ПОЛКА'" class="resources__logo">
-          </li> 
-        </ul>
+        <p class="section-subtitle section-subtitle_margin_top">Больше материалов о техниках и лайфхаках обучения</p>
+        <nav>
+          <ul class="resources__logo-zone">
+            <li>
+              <a href="#" class="resources__logo-link">
+                <img src="../how-to-learn/images/resources-arzamas.svg" alt="Логотип 'Arzamas'" class="resources__logo">
+              </a>       
+            </li>
+            <li>
+              <a href="#" class="resources__logo-link">
+                <img src="../how-to-learn/images/resources-n1.svg" alt="Логотип 'N+1'" class="resources__logo">
+              </a>
+            </li>
+            <li>
+              <a href="#" class="resources__logo-link">
+                <img src="../how-to-learn/images/resources-strelka.svg" alt="Логотип 'STRELKA'" class="resources__logo">
+              </a>
+            </li>
+            <li>
+              <a href="#" class="resources__logo-link">
+                <img src="../how-to-learn/images/resources-polka.svg" alt="Логотип 'ПОЛКА'" class="resources__logo">
+              </a>
+            </li> 
+          </ul>
+        </nav>   
       </section>
   
     </main>
