remove the extra semicolon and fix the tag P

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
-        <P class="section-subtitle section-subtitle_margin_top">Пять практик от Барбары Оакли</P>
+        <p class="section-subtitle section-subtitle_margin_top">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
             <img src="../how-to-learn/images/cards-attention.png" alt="Иллюстрация 'Два вида внимания'" class="cards__image">
