--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
         <p class="section-subtitle section-subtitle_margin_top">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-attention.png" alt="Иллюстрация 'Два вида внимания'" class="cards__image">
+            <img src="./images/cards-attention.png" alt="Иллюстрация 'Два вида внимания'" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-recall.png" alt="Иллюстрация 'Вспоминайте изученное'" class="cards__image">
+            <img src="./images/cards-recall.png" alt="Иллюстрация 'Вспоминайте изученное'" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-interliving.png" alt="Иллюстрация 'Интерливинг'" class="cards__image">
+            <img src="./images/cards-interliving.png" alt="Иллюстрация 'Интерливинг'" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-question.png" alt="Иллюстрация 'Вопросы'" class="cards__image">
+            <img src="./images/cards-question.png" alt="Иллюстрация 'Вопросы'" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-competence.png" alt="Иллюстрация 'Иллюзия компетентности'" class="cards__image">
+            <img src="./images/cards-competence.png" alt="Иллюстрация 'Иллюзия компетентности'" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
@@ -156,7 +156,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
           <div class="khan__book-container">
-            <img src="../how-to-learn/images/khan-book.jpg" alt="Книга 'Весь мир - школа'" class="khan__book-pic">
+            <img src="./images/khan-book.jpg" alt="Книга 'Весь мир - школа'" class="khan__book-pic">
             <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
           </div>
         </div>
@@ -217,22 +217,22 @@
           <ul class="resources__logo-zone">
             <li>
               <a href="#" class="resources__logo-link">
-                <img src="../how-to-learn/images/resources-arzamas.svg" alt="Логотип 'Arzamas'" class="resources__logo">
+                <img src="./images/resources-arzamas.svg" alt="Логотип 'Arzamas'" class="resources__logo">
               </a>       
             </li>
             <li>
               <a href="#" class="resources__logo-link">
-                <img src="../how-to-learn/images/resources-n1.svg" alt="Логотип 'N+1'" class="resources__logo">
+                <img src="./images/resources-n1.svg" alt="Логотип 'N+1'" class="resources__logo">
               </a>
             </li>
             <li>
               <a href="#" class="resources__logo-link">
-                <img src="../how-to-learn/images/resources-strelka.svg" alt="Логотип 'STRELKA'" class="resources__logo">
+                <img src="./images/resources-strelka.svg" alt="Логотип 'STRELKA'" class="resources__logo">
               </a>
             </li>
             <li>
               <a href="#" class="resources__logo-link">
-                <img src="../how-to-learn/images/resources-polka.svg" alt="Логотип 'ПОЛКА'" class="resources__logo">
+                <img src="./images/resources-polka.svg" alt="Логотип 'ПОЛКА'" class="resources__logo">
               </a>
             </li> 
           </ul>
