--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
           <div class="khan__book-container">
-            <img src="./images/khan-book.jpg" alt="Книга 'Весь мир - школа'" class="khan__book-pic">
+            <img src="./images/khan-book.jpg" alt="Обложка книги Салман Хана 'Весь мир - школа'" class="khan__book-pic">
             <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
           </div>
         </div>
