--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <main class="content">
 
-      <section class="description">
-        <article class="two-columns">
+      <article class="description">
+        <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -39,8 +39,8 @@
               техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </article>
-      </section>
+        </div>
+      </article>
 
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
@@ -87,8 +87,8 @@
         </ul> 
       </section>
       
-      <section class="oakley">
-        <arcticle class="two-columns">
+      <article class="oakley">
+        <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -98,8 +98,8 @@
               с первого взгляда.
             </p>
           </div>
-        </arcticle>
-      </section>
+        </div>
+      </article>
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
